--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "commander": "^14.0.0",
     "ts-morph": "^26.0.0",
+    "typescript-language-server": "^4.4.0",
     "vscode-jsonrpc": "^8.2.0",
     "vscode-languageserver-protocol": "^3.17.5"
   },
