--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/leo-lucas/docgram.git"
+  },
+  "homepage": "https://github.com/leo-lucas/docgram#readme",
   "dependencies": {
     "commander": "^14.0.0",
     "ts-morph": "^26.0.0",
