--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "tsc",
     "diagram": "npm run build && node dist/cli.js diagram",
     "docs": "npm run build && node dist/cli.js docs",
-    "test": "npm run build && node --test",
+    "test": "npm run build && node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "prepublishOnly": "npm run build"
   },
   "keywords": [],
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "jest": "^29.7.0"
   }
 }
