--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build": "tsc",
     "diagram": "npm run build && node dist/cli.js diagram",
     "docs": "npm run build && node dist/cli.js docs",
-    "test": "npm run build && node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test": "jest",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier -w .",
     "prepublishOnly": "npm run build"
   },
   "keywords": [],
@@ -33,6 +35,12 @@
   "devDependencies": {
     "@types/node": "^24.3.0",
     "typescript": "^5.9.2",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "eslint": "^8.57.0",
+    "prettier": "^3.3.2",
+    "@typescript-eslint/parser": "^7.8.0",
+    "@typescript-eslint/eslint-plugin": "^7.8.0"
   }
 }
