Add CI workflow for tests and build

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,9 @@ jobs:
           node-version: 18
           registry-url: https://registry.npmjs.org/
       - run: npm ci
+      - run: npm run lint
       - run: npm test
+      - run: npm run build
       - name: Set package version from tag
         run: |
           VERSION="${GITHUB_REF_NAME#v}"
