fix: include readme in npm package

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": {
     "docgram": "dist/cli.js"
   },
-  "files": ["dist"],
+  "files": ["dist", "README.md"],
   "type": "module",
   "scripts": {
     "build": "tsc",
